--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 .w3-bar-block .w3-bar-item {padding:20px}
 </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7990736697930262"
+     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-7990736697930262">
 </head>
 <body style="background-color: #6c6cc3;">
 <!-- Top menu -->
