--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-adsense-account" content="ca-pub-7990736697930262">
+    <meta name="description" content="For kids and children! Play free games, small games, simple games and safe games. Flappy Bird, Slice, Air Simulation, Candy Crash, Pokemon, Butterfly">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7990736697930262"
     crossorigin="anonymous"></script>
 
